--- a/requirements.txt
+++ b/requirements.txt
@@ -3,6 +3,7 @@ backports.shutil-get-terminal-size==1.0.0
 bleach==2.0.0
 certifi==2017.4.17
 configparser==3.5.0
+cycler==0.10.0
 decorator==4.0.11
 entrypoints==0.2.2
 enum34==1.1.6
@@ -20,6 +21,7 @@ jupyter-console==5.1.0
 jupyter-core==4.3.0
 Keras==1.2.2
 MarkupSafe==1.0
+matplotlib==2.0.2
 mistune==0.7.4
 nbconvert==5.2.1
 nbformat==4.3.0
@@ -32,7 +34,9 @@ pickleshare==0.7.4
 prompt-toolkit==1.0.14
 ptyprocess==0.5.1
 Pygments==2.2.0
+pyparsing==2.2.0
 python-dateutil==2.6.0
+pytz==2017.2
 PyYAML==3.12
 pyzmq==16.0.2
 qtconsole==4.3.0
@@ -41,6 +45,7 @@ scipy==0.19.0
 simplegeneric==0.8.1
 singledispatch==3.4.0.3
 six==1.10.0
+subprocess32==3.2.7
 terminado==0.6
 testpath==0.3.1
 Theano==0.9.0
