--- a/requirements.txt
+++ b/requirements.txt
@@ -27,10 +27,13 @@ nbconvert==5.2.1
 nbformat==4.3.0
 notebook==5.0.0
 numpy==1.13.0
+olefile==0.44
+pandas==0.20.2
 pandocfilters==1.4.1
 pathlib2==2.2.1
 pexpect==4.2.1
 pickleshare==0.7.4
+Pillow==4.1.1
 prompt-toolkit==1.0.14
 ptyprocess==0.5.1
 Pygments==2.2.0
@@ -41,6 +44,7 @@ PyYAML==3.12
 pyzmq==16.0.2
 qtconsole==4.3.0
 scandir==1.5
+scikit-learn==0.18.1
 scipy==0.19.0
 simplegeneric==0.8.1
 singledispatch==3.4.0.3
