--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,6 @@
 backports-abc==0.5
 backports.shutil-get-terminal-size==1.0.0
+bcolz==1.1.2
 bleach==2.0.0
 certifi==2017.4.17
 configparser==3.5.0
@@ -8,6 +9,7 @@ decorator==4.0.11
 entrypoints==0.2.2
 enum34==1.1.6
 functools32==3.2.3.post2
+h5py==2.7.0
 html5lib==0.999999999
 ipykernel==4.6.1
 ipython==5.4.1
