--- a/requirements.txt
+++ b/requirements.txt
@@ -9,6 +9,7 @@ decorator==4.0.11
 entrypoints==0.2.2
 enum34==1.1.6
 functools32==3.2.3.post2
+gpustat==0.3.1
 h5py==2.7.0
 html5lib==0.999999999
 ipykernel==4.6.1
