--- a/requirements.txt
+++ b/requirements.txt
@@ -28,6 +28,7 @@ matplotlib==2.0.2
 mistune==0.7.4
 nbconvert==5.2.1
 nbformat==4.3.0
+networkx==1.11
 notebook==5.0.0
 numpy==1.13.0
 olefile==0.44
@@ -43,10 +44,12 @@ Pygments==2.2.0
 pyparsing==2.2.0
 python-dateutil==2.6.0
 pytz==2017.2
+PyWavelets==0.5.2
 PyYAML==3.12
 pyzmq==16.0.2
 qtconsole==4.3.0
 scandir==1.5
+scikit-image==0.13.0
 scikit-learn==0.18.1
 scipy==0.19.0
 simplegeneric==0.8.1
